# Finam

./: .gitignore  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  user_data.db
.github/workflows/: build-macos.yml
assets/lang/: vi.json
src/: app.py  database.py  user_data.db  utils.py
src/pages/: add_saving.py  home.py  lessons.py  login.py  saving.py
src/pages/global_elements/: menu.py
